Add Swagger documentation for challenges api
