# internal/controller/challenges_api.go
@@ -12,10 +12,19 @@ func (h *Controller) initChallengesRoutes(api *gin.RouterGroup) {
 	{
 		courses.GET("/", h.getAllChallenges)
 		courses.POST("/", h.userIdentity, h.createChallenge)
-		courses.GET("/:challengeId", h.getAllChallenges)
+		courses.GET("/:challengeId/participants", h.getParticipantsByChallenge)
 	}
 }
 
+// @Summary Create challenge
+// @Security Auth
+// @Tags challenges
+// @Description Создание нового челленджа
+// @Accept json
+// @Produce json
+// @Param input body model.Challenge true "Модель челленджа"
+// @Success 200 {object} dto.IdResponse
+// @Router /challenges [post]
 func (h *Controller) createChallenge(c *gin.Context) {
 	var input model.Challenge
 	if err := c.BindJSON(&input); err != nil {
@@ -30,11 +39,27 @@ func (h *Controller) createChallenge(c *gin.Context) {
 	handleCreation(c, id, err)
 }
 
+// @Summary Get all challenges
+// @Tags challenges
+// @Description Получение списка челленджей
+// @Accept json
+// @Produce json
+// @Success 200 {array} model.Challenge
+// @Router /challenges [get]
 func (h *Controller) getAllChallenges(c *gin.Context) {
 	challenges, err := h.services.Challenges.GetAll()
 	commonJSONResponse(c, challenges, err)
 }
 
+// @Summary Get challenge's participants
+// @Tags challenges, participants
+// @Description Получение списка участников в челлендже
+// @Accept json
+// @Produce json
+// @Param challengeId path string true "Id челленджа"
+// @Param status query string false "Статус участников"
+// @Success 200 {array} model.Participant
+// @Router /challenges/{challengeId}/participants [get]
 func (h *Controller) getParticipantsByChallenge(c *gin.Context) {
 	challengeId := c.Param("challengeId")
 
